# vpy

./: .#adapt.py  .gitignore  Dockerfile  README.md  adapt.py  aux.py  counter.py  lib_types.py  lookup.py  play.py  pyproject.toml  requirements.txt  slice.py  vfj.py
examples/: README.md  api.py  api_ssa.py  counter.py  dogs.py  duplicate_definitions.py  field_lens.py  merge_conflict.py  method_lens.py  missing_field_lens.py  missing_lens.py  missing_method_lens.py  name.py  nested.py  rewrite.py  tchecker.py  tchecker_attributes.py  tchecker_attrs.py  tchecker_call.py  tchecker_duplicate_methods.py  tchecker_graph.py  tchecker_method_lens.py  wrong_method_lens.py
examples/lenses/: fields.py  methods.py
examples/refactor/: change_field_type.py  classes.py  fields.py  method_parameters.py  rename_field.py
examples/typechecker/: tchecker_attributes.py  tchecker_call.py  tchecker_field_lens.py  tchecker_graph.py  tchecker_method_conflict.py  tchecker_method_lens.py
vpy/: __main__.py  cli.py  decorators.py
vpy/lib/: adapt.py  lib_types.py  lookup.py  runtime.py  slice.py  utils.py
vpy/lib/transformers/: assignment.py  class.py  cls.py  decorators.py  fields.py  lens.py  method_selection.py  methods.py  module.py  rewrite.py  toolkit.py
vpy/lib/visitors/: alias.py  fields.py  methods.py
vpy/tests/: test_lenses.py  test_name.py
vpy/typechecker/: checker.py  pyanalyze_plugin.py
vpy/typechecker/pyanalyze/: __main__.py  analysis_lib.py  annotated_types.py  annotations.py  arg_spec.py  ast_annotator.py  attributes.py  boolability.py  error_code.py  extensions.py  (+37 more)
(+2 files in other folders)
